--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -18,7 +18,7 @@
     \captionsetup{font=doublespacing}
 
 % REFERENCES
-    \usepackage[firstinits=true, backend=biber, style=authoryear, url=false, isbn=false, doi=false, eprint=false]{biblatex}
+    \usepackage[firstinits=true, backend=biber, style=authoryear, maxcitenames=2, url=false, isbn=false, doi=true, eprint=false]{biblatex}
     \DeclareNameAlias{sortname}{last-first}
 
     \addbibresource{../../../../BibTex_files/03_Chapter3.bib}
@@ -91,11 +91,11 @@ Data will be submitted to Dryad upon publication.
     
     \begin{enumerate}
     \item{Network theory allows us to understand complex systems by evaluating how their constituent elements interact with one another. Such networks are built from matrices which describe the effect of each element on all others. Quantifying the strength of these interactions from empirical data can be difficult, however, because the number of potential interactions increases non-linearly as more elements are included in the system, and not all interactions may be empirically observable when some elements are rare.}
-    \item{We present a novel modelling framework which estimates the strength of identifiable and unidentifiable interactions in diverse horizontal systems, using measures of species performance in the presence of varying densities of their potential interaction partners.}
-    \item{The resulting interaction matrices can include positive and negative effects, the effect of a species on itself, and are non-symmetrical.} 
+    \item{We present a novel modelling framework which estimates the strength of pairwise interactions in diverse horizontal systems, using measures of species performance in the presence of varying densities of their potential interaction partners.}
+    \item{Our method allows us to directly estimate pairwise effects when they are statistical identifiable and approximate pairwise effects when they would otherwise be statistically unidentifiable. The resulting interaction matrices can include positive and negative effects, the effect of a species on itself, and are non-symmetrical.} 
     \item{The advantages of these features are illustrated with a case study on an annual wildflower community of 22 focal and 52 neighbouring species, with potential applications of this framework extending well beyond plant community ecology.}
 \end{enumerate}
-% Can lengthen abstract for MEE
+% Abstract = 189 words
 
 \section{Introduction}
 
@@ -121,7 +121,7 @@ Data will be submitted to Dryad upon publication.
 \section{Methods}
 
 \paragraph{} 
-We developed a joint modeling framework to estimate pairwise interactions in diverse systems from measures of species performance under varying densities of different interaction partners. This framework benefits from several distinguishing features including the ability to estimate both \textit{identifiable} interactions (direct estimates from the observed data) and \textit{unidentifiable} interactions (when observations are missing or too few). After describing the required data (\ref{meth:data} below), we show how one can estimate identifiable interactions with a unique interaction parameter as described in the neighbour-density dependent model (\ref{meth:nddm}).
+We developed a joint modeling framework to estimate pairwise interactions which benefits from several distinguishing features including the ability to estimate both \textit{identifiable} interactions (direct estimates from the observed data) and \textit{unidentifiable} interactions (when observations are missing or too few). After describing the required data (\ref{meth:data} below), we show how one can estimate identifiable interactions with a unique interaction parameter as described in the neighbour-density dependent model (\ref{meth:nddm}).
 % edit below
 We then define and select which interactions are identifiable and which are not (\ref{meth:id_params}). Independently to the first model, we also describe a response--impact model (\ref{meth:rim}) where species have a singular effect on neighbours, and a singular response. This allows us to estimate unidentifiable interactions as the product of element-specific response and impact parameters. Both models contribute to the overall joint model likelihood as detailed in \ref{meth:addlog}.
 Taken together, identifiable and unidentifiable interaction estimates are then used to populate community interaction matrices for the system that describes the effects of all interaction partners on the performance of all focal species. 
@@ -152,8 +152,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
         f(p_{k}) = \gamma_{d_k} - \sum_{j=1}^{t} \beta_{d_k,j} \, X_{d_k,j}
         \label{nddm}
         \end{equation}
-
-        The parameters $\beta_{d_k,j}$ capture the effect of each species $j$ on $i$ whereas the intercept $\gamma_{d_k}$ represents intrinsic performance (in the link scale), a species' performance in the absence of interactions or when all interaction effects are $0$. Note that interacting species $j$ can include members of focal species $i$ itself, in which case intraspecific interactions are captured by the parameter $\beta_{d_k,i}$. Furthermore, the equation above places no restrictions on the sign of $\beta_{d_k, j}$: interactions can be harmful to the focal species (competitive) or beneficial (facilitative). The negative sign in front of $\beta$ does, however, mean that positive interaction estimates should be interpreted as competitive and negative estimates as facilitative.
+        The parameters $\beta_{d_k,j}$ capture the effect of each species $j$ on $i$ whereas the intercept $\gamma_{d_k}$ represents intrinsic performance (in the link scale), a species' performance in the absence of interactions or when all interaction effects are $0$. Note that interacting species $j$ can include members of focal species $i$ itself, in which case intraspecific interactions are captured by the parameter $\beta_{d_k,i}$. Furthermore, the equation above places no restrictions on the sign of $\beta_{d_k, j}$: interactions can be harmful to the focal species (competitive) or beneficial (facilitative). The negative sign in front of $\beta$ does, however, mean that positive interaction estimates should be interpreted as competitive and negative estimates as facilitative. Note that because $d_k$ is the focal species index for each observation, parameters making use of the $d_k$ subscript can use an $i$ subscript instead when they are no longer linked to a specific observation of performance.
 
         \paragraph{}
         We implement this model, as well as the RIM described below (in \ref{meth:rim}), as generalised linear models. This means that the relationship between $p_k$ and the right-hand side of the equation does not need to be linear. This can easily be changed by choosing an appropriate link function $f(p_k)$ for the data in question. In our case study, for example, we use the link function $f(p_k) = \ln(p_k)$ since we model our response variable as a negative-binomial variate.
@@ -163,19 +162,17 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     \label{meth:id_params}
 
     \paragraph{}
-    A common issue in observational datasets is that some species or elements may not be observed to interact with many other species or to interact at sufficiently variable densities because data sampling is limited in space and time. This can create a situation in which we cannot estimate all potential interaction parameters ($\beta_{d_k, j}$) in the NDDM specified above, especially for rare species $j$. For an interaction parameter to be \textit{identifiable}, and thus inferrable by the NDDM, the data must contain measurements of the performance of $i$ when interacting with $j$ at varying densities. Moreover, the vector of densities of $j$ associated to measurements of focal $i$ must be linearly independent to all other vectors of densities of other species interacting with $i$. For example, if two species $a$ and $b$ interact with focal $i$ yet have the same density at every measurement or equally proportional densities at every measurement, neither $\beta_{d_k, a}$ nor $\beta_{d_k, b}$ will be inferrable by the NDDM. We define \textit{identifiable} interactions as those which are inferrable following the above assumptions, and \textit{unidentifiable} interactions as those which are not. We construct a matrix $Q$ of size $s \times t$, with $Q_{d_k, j} = 1$ if the corresponding $\beta_{d_k, j}$ parameter is identifiable, and $Q_{d_k, j} = 0$ if not. How we mathematically construct this $Q$ matrix is shown in the code shared with the github repository associated to this paper.
+    A common issue in observational datasets is that some species or elements may not be observed to interact with many other species or to interact at sufficiently variable densities because data sampling is limited in space and time. This can create a situation in which we cannot estimate all potential interaction parameters ($\beta_{i,j}$) in the NDDM specified above, especially for rare species $j$. For an interaction parameter to be \textit{identifiable}, and thus inferrable by the NDDM, the data must contain measurements of the performance of $i$ when interacting with $j$ at varying densities. Moreover, the vector of densities of $j$ associated to measurements of focal $i$ must be linearly independent to all other vectors of densities of other species interacting with $i$. For example, if two species $a$ and $b$ interact with focal $i$ yet have the same density at every measurement or equally proportional densities at every measurement, neither $\beta_{i, a}$ nor $\beta_{i, b}$ will be inferrable by the NDDM. We define \textit{identifiable} interactions as those which are inferrable following the above assumptions, and \textit{unidentifiable} interactions as those which are not. We construct a matrix $Q$ of size $s \times t$, with $Q_{i, j} = 1$ if the corresponding $\beta_{i, j}$ parameter is identifiable, and $Q_{i, j} = 0$ if not. How we mathematically construct this $Q$ matrix is shown in the code shared with the github repository associated to this paper.
     
     \subsection{Unidentifiable parameters and the response--impact model}
     \label{meth:rim}
 
     \paragraph{}
-    Estimating unidentifiable interaction parameters is a complex challenge for which no single answer exists. Here, we address the issue by using an alternative model which assumes that species typically have a singular impact ($e_i$) on and a singular response ($r_{d_k}$) to neighbours independent of neighbour identity (response and impact model, or RIM - see \cite{Godoy2014b}). A pairwise interaction parameter is therefore the product of a focal species' response parameter and an interacting species impact parameters. The density-dependent model of performance then becomes:
-
+    Estimating unidentifiable interaction parameters is a complex challenge for which no single answer exists. Here, we address the issue by using an alternative model which assumes that a species $i$ will typically have a singular impact ($e_i$) on and a singular response ($r_i$) to neighbours independent of neighbour identity (response and impact model, or RIM - see \cite{Godoy2014b}). A pairwise interaction parameter is therefore the product of a focal species' $i$ response parameter and an interacting species $j$ impact parameters. The density-dependent model of performance then becomes:
         \begin{equation}
         f(p_{k}) = \gamma_{d_k} - r_{d_k} \sum_{j=1}^{t} e_{j} X_{d_k, j}
         \label{rim}
         \end{equation}
-
     %DBS: I commented out the sentence below because we still aren't "replacing" one parameter estimate with another until the next section. I don't think it makes sense as currently writren. Instead, I have clarified the benefit of the RIM after explaining the identifiability condition.
     %Pairwise interaction parameters which cannot be inferred from Eq.~\ref{nddm} can be approximated with Eq.~\ref{rim} by multiplying the relevant $r_{d_k}$ and $e_{j}$ such that $\beta_{d_k, j} = r_{d_k} e_{j}$.
     To fit the RIM, the densities of species $j$ must be linearly independent to the densities of other species and/or combinations of species, but across the entire $X$ matrix. This is in contrast to \ref{meth:nddm} above, where the densities of $j$ must be linearly independent within the subset of observations for each focal $i$. Importantly, this is a less strict condition for parameter identifiability. As a result, it is possible to estimate pairwise interactions that would be unidentifiable given Eq.~\ref{nddm} by recognizing that pairwise density dependence in Eq.~\ref{rim} is given by $\beta_{i, j} = r_{i} e_{j}$.
@@ -184,57 +181,45 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     \subsection{Joining the two models}
     \label{meth:addlog}
 
-
-    %The aim of the joint framework is to estimate $B$, the $s \times t$ matrix of interactions between all focal elements $i$ and interacting elements $j$. [[DBS: Isn't it also to estimate the intercept? Or even better, to estimate the parameters of a model of density-dependent performance, full stop?]] 
-    %The effect of element $j$ on the performance of focal element $i$ is noted as $\beta_{ij}$, corresponding to the $i$'th row and the $j$'th column of $B$. 
-
     \paragraph{}
     The interaction parameters returned by Eqs.~\ref{nddm} and \ref{rim} can be used to construct a community interaction matrix $B$ of size $s \times t$, where the effect of species $j$ on focal species $i$ corresponds to the $i$'th row and the $j$'th column of $B$. An approximation of the matrix of interactions $B$ is thus given by:
-
         \begin{equation}
         B = Q \circ \tilde B + (1 - Q) \circ r e^T
         \label{matB}
         \end{equation}
+    where $\circ$ represents the elementwise (Hadamard) product, $Q$ is the matrix of identifiable interactions, and $\tilde B$ is an $s \times t$ matrix that only has free parameters inferred in the locations where $Q_{i, j} =1$. In other words, the final interaction matrix $B$ takes a free parameter from the NDDM when that parameter is identifiable, and the corresponding RIM estimate, $r_i e_j$, when that parameter is not.
 
-    
-    where $\circ$ represents the elementwise (Hadamard) product, $Q$ is the matrix of identifiable interactions, and $\tilde B$ is an $s \times t$ matrix that only has free parameters inferred in the locations where $Q_{d_k, j} =1$. In other words, the final interaction matrix $B$ takes a free parameter from the NDDM when that parameter is identifiable, and the corresponding RIM estimate, $r_{d_k} e_j$, when that parameter is not.
-
-    We can fit all parameters simultaneously by requiring that both the NDDM and RIM  contribute to an overall joint model log likelihood:
-
+    \paragraph{}
+    We can fit all parameters simultaneously by requiring that both the NDDM and RIM contribute to an overall joint model log likelihood:
          \begin{equation}
         \mathcal{L}_{joint} = \mathcal{L}_{RIM} + \mathcal{L}_{NDDM}
         \label{loglikjoint}
         \end{equation}
-
     with
-
         \begin{equation}
         \mathcal{L}_{RIM} = \sum_{k=1}^{n} \log ({\rm Pr} (p_k | \gamma, r, e, \dots))
         \label{logrim}
         \end{equation}
-
         \begin{equation}
         \mathcal{L}_{NDDM} = \sum_{k=1}^{n} \log ({\rm Pr} (p_k | \gamma, B, \dots))
         \label{lognddm}
         \end{equation}
-
-
     where both sums are across all $n$ observations, ${\rm Pr}$ is the probability density for the model (e.g.\ negative binomial), $p_k$ the vector of measured performances, $\gamma, r, e,$ and $B$ are parameters as defined in Eqs.~\ref{nddm} and \ref{rim}, and $\dots$ includes any other parameters (e.g.\ dispersion if using a negative binomial distribution for the data). Note that $p_k$ and $\gamma$ are common to both the RIM and NDDM.
 
     \paragraph{}
-    For a hypothetical dataset with which all interactions are identifiable, then $B = \tilde B$ and fitting the RIM is not strictly unnecessary. The parameter vectors $r$ and $e$ would still be estimated, but they are independent of the parameters in $\tilde B$ and hence maximization of both likelihoods is independent. Conversely, if no interactions are identifiable then the joint model devolves to the RIM only. In the middle ground---where the majority of datasets are likely to lie---the joint model framework allows us to estimate free interaction parameters when possible, and use $r_{d_k} \times e_j$ estimates when not.  An important distinction to make is that the NDDM estimates identifiable interactions only, whereas the RIM estimates all interactions, pairwise identifiable and pairwise unidentifiable. However, by maximising Eq. \ref{loglikjoint} we allow both models to provide good fits to the data but also for $r$ and $e$ to ``adjust'' around inferred values of $\tilde B$. 
+    For a hypothetical dataset with which all interactions are identifiable, then $B = \tilde B$ and fitting the RIM is not strictly unnecessary. The parameter vectors $r$ and $e$ would still be estimated, but they are independent of the parameters in $\tilde B$ and hence maximization of both likelihoods is independent. Conversely, if no interactions are identifiable then the joint model devolves to the RIM only. In the middle ground---where the majority of datasets are likely to lie---the joint model framework allows us to estimate free interaction parameters when possible, and use $r_i e_j$ estimates when not. An important distinction to make is that the NDDM estimates identifiable interactions only, whereas the RIM estimates all interactions, pairwise identifiable and pairwise unidentifiable. However, by maximising Eq. \ref{loglikjoint} we allow both models to provide good fits to the data but also for $r$ and $e$ to ``adjust'' around inferred values of $\tilde B$. 
 
 
-    \subsection{Rescaling interaction estimates into per-capita interactions}
+    \subsection{Rescaling interaction estimates into per capita interactions}
 
-        The $\beta_{d_k, j}$ estimates returned by the framework describe the effect of species $j$ on the performance of species $i$. Differences in the magnitude of these interaction terms may thus reflect intrinsic differences in performance, which can vary in time, space and between species. Two species may for example have different baseline values of reproductive fitness. In order to make the effects of interactions comparable between species, the interaction terms returned by both models above can be transformed into \textit{per capita} interaction strengths \parencite{Laska1998}. The appropriate scaling is determined by rewriting the neighbour density-dependent model (Eq. \ref{nddm}) into a form equivalent to a Lotka-Volterra competition model: 
+        The $\beta_{i, j}$ estimates returned by the framework describe the effect of species $j$ on the performance of species $i$. Differences in the magnitude of these interaction terms may thus reflect intrinsic differences in performance, which can vary in time, space and between species. Two species may for example have different baseline values of reproductive fitness. In order to make the effects of interactions comparable between species, the interaction terms returned by both models above can be transformed into \textit{per capita} interaction strengths \parencite{Laska1998}. The appropriate scaling is determined by rewriting the neighbour density-dependent model (Eq. \ref{nddm}) into a form equivalent to a Lotka-Volterra competition model: 
         \begin{equation}
         f(p_{k}) = \gamma_{d_k} \left ( 1 - \sum_{j=1}^{t} {\beta}''_{d_k, j} X_{d_k, j} \right )
         \label{LVform}
         \end{equation}
         This reveals that our interaction terms can be rescaled into per-capita interaction strengths by dividing them by the recipient element's intrinsic performance:  
         \begin{equation}
-        {\beta}''_{d_k, j} = \frac{\beta_{d_k, j}}{\gamma_{d_k}}
+        {\beta}''_{i, j} = \frac{\beta_{i, j}}{\gamma_{i}}
         \label{scaling}
         \end{equation}
         Though this scaling step is not strictly necessary, for ecological datasets per capita interaction strengths have the benefit of being directly comparable both across species and across environmental contexts where reproductive fitness may vary \parencite{Wootton2005}, leading to a wider range of potential applications.
@@ -242,7 +227,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     \subsection{Integrating interaction strengths into models of population dynamics}
 
         \paragraph{}
-        In certain instances, models of species population dynamics can be used to further extend the usefulness of the framework presented here. We suggest two cases where such an application may be useful. Firtly, the variable chosen to measure the performance of focal species $p_{d_k}$ may not directly translate into a measure of performance which is relevant to system dynamics,  due to inherent practical constraints with collecting empirical data. For example, the life-history reproductive strategies of certain species may lead to measures of high fecundity (or performance) in the field which do not account for low survival rates post-observation \parencite{Broekman2020}. In these cases, population dynamics models can be used to account for species-specific demographic rates into estimates of interaction effects. Alternatively, we might be more interested in the effects of interacting species on the density or growth rate of a focal species rather than on it's performance. In this scenario, a population dynamic model can be used to translate interaction effects on the measured variable into interaction strengths affecting the variable of interest. 
+        In certain instances, models of species population dynamics can be used to further extend the usefulness of the framework presented here. We suggest two cases where such an application may be useful. Firtly, the variable chosen to measure the performance of focal species $p$ may not directly translate into a measure of performance which is relevant to system dynamics,  due to inherent practical constraints with collecting empirical data. For example, the life-history reproductive strategies of certain species may lead to measures of high fecundity (or performance) in the field which do not account for low survival rates post-observation \parencite{Broekman2020}. In these cases, population dynamics models can be used to account for species-specific demographic rates into estimates of interaction effects. Alternatively, we might be more interested in the effects of interacting species on the density or growth rate of a focal species rather than on it's performance. In this scenario, a population dynamic model can be used to translate interaction effects on the measured variable into interaction strengths affecting the variable of interest. 
 
         \paragraph{}
         In both cases, an established population dynamic model is required as well as knowledge of any crucial species-specific demographic rates. This step is illustrated for our case study in the Supplementary Methods \ref{SI:popdyn}, where an annual plant population dynamic model is used to transform effects on wildflower seed production (the measured proxy for performance) into effects on population growth, and includes species-specific estimates of seed germination and survival rates. 
@@ -255,10 +240,10 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
 
         \paragraph{}        
         We implement the NDDM (Eq.~\ref{nddm}), the RIM (Eq.~\ref{rim}), and the joint model as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language where coefficient values will be estimated by MCMC sampling. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to discriminate between identifiable and unidentifiable interactions. We provide a working example of the STAN code used to specify and set this model to the case study below, as well as the necessary R scripts and functions to run the model on a simulated dataset on our public github repository \url{https://github.com/malbion/Methods_for_compnet}.
-        From the model file, only the link function for $p_{d_k}$ and it's parameterisation need to be modified in order to apply it to a differently-distributed dataset. Additionally, non-integer measures of performance (e.g.\ biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production ($p_{d_k}$) but a different distribution may be more appropriate when using other measures of performance.   
+        From the model file, only the link function for $p_k$ and it's parameterisation need to be modified in order to apply it to a differently-distributed dataset. Additionally, non-integer measures of performance (e.g.\ biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production but a different distribution may be more appropriate when using other measures of performance.   
 
         \paragraph{}
-        Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_{d_k}$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{Hui2021} and the MCMCfactanal function in the MCMCpack package \parencite{Martin2011}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching. Though many MCMC convergence diagnostics require multiple chains to be computed, single chain convergence can be assessed with the Geweke convergence statistic \parencite{Geweke1992}, for example with the geweke.diag() function from the coda package \parencite{Plummer2006}, as well as visually checking traceplots.
+        Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_i$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{Hui2021} and the MCMCfactanal function in the MCMCpack package \parencite{Martin2011}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching. Though many MCMC convergence diagnostics require multiple chains to be computed, single chain convergence can be assessed with the Geweke convergence statistic \parencite{Geweke1992}, for example with the geweke.diag() function from the coda package \parencite{Plummer2006}, as well as visually checking traceplots.
 
         \paragraph{}
         STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which these parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, and samples from the posterior are drawn for analysis. Using parameter distributions rather than point estimates allows for easy inclusion of uncertainty in the analysis of results, we therefore recommend bootstrap sampling from each posterior interaction strength distribution to create multiple samples of the community interaction matrix. \textcite{Ellison2004} also provides an accessible review of parameter estimates and the use of posterior distributions using a worked example on ant species richness data.
@@ -284,7 +269,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM.  When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}), this is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Figure \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. Interaction estimates were scaled into per-capita interaction strengths, and we applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the per-capita community interaction matrix.
 
     \paragraph{}
-    For our case study, the resulting community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each per-capita interaction  across all samples. Overall, 63.6\% of focal species had a median intraspecific interaction strength which was competitive, making competition the dominant interaction type. The median value of 46.7\% of focal $\times$ neighbour interactions however were facilitative, as were the medians of 43.3\% of all focal $\times$ focal interactions. As a result, 47.6\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates it's own performance. For 11 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species.
+    For our case study, the resulting community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each per-capita interaction  across all samples. Overall, 63.6\% of focal species had a median interspecific interaction strength which was competitive, making competition the dominant interaction type. The median value of 46.7\% of focal $\times$ neighbour interactions however were facilitative, as were the medians of 43.3\% of all focal $\times$ focal interactions. As a result, 47.6\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates it's own performance. For 11 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species.
 
 
     %\paragraph{}
@@ -325,7 +310,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     Quantifying the matrix of per-capita interaction strengths between species in horizontal communities can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another. Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive and facilitative density-dependence. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}); weak interactions between species suggest that they are not sharing or competing for many resources, and thus may have large niche differences in the community. %Strong competitive self-regulation, and weak interactions between two species, are two of many mechanisms leading to stability and diversity in plant communities.
 
     \paragraph{}
-    Another key feature of our model framework is the inclusion of facilitative interactions, which have traditionally been disregarded in plant population models and theoretical frameworks of plant diversity-maintenance. The importance of facilitative interactions to community structure and patterns of abundance has long been recognised \parencite{Callaway1997a} but there is still little consensus on how they may affect biodiversity \parencite{Bruno2003, Brooker2008a}. Recent work suggests facilitation may be more widespread than traditionally thought \parencite{Gross2015, Picoche2020} and can benefit species diversity and stability depending on the circumstances \parencite{Coyte2015, Brooker2008}. Our framework provides a means to investigate the prevalence and strength of facilitation across multiple species, and how it may act in relation to competition and species diversity.  
+    Another key feature of our model framework is the inclusion of facilitative interactions, which have traditionally been disregarded in plant population models and theoretical frameworks of plant diversity-maintenance. The importance of facilitative interactions to community structure and patterns of abundance has long been recognised \parencite{Callaway1997a} but there is still little consensus on how they may affect biodiversity \parencite{Bruno2003, Brooker2008}. Recent work suggests facilitation may be more widespread than traditionally thought \parencite{Gross2015, Picoche2020} and can benefit species diversity and stability depending on the circumstances \parencite{Coyte2015, Brooker2008}. Our framework provides a means to investigate the prevalence and strength of facilitation across multiple species, and how it may act in relation to competition and species diversity.  
         
     \paragraph{}
     Ultimately, quantifying species interaction networks allows us to apply tools from network theory which will help us understand not only how species interact, but also how these interactions drive community-level patterns of density and diversity. Several metrics already exist for describing horizontal network structure such as weighted connectance \parencite{Ulanowicz1991} or relative intransitivity \parencite{Laird2006a}, though these are fewer than for trophic or unweighted networks networks (e.g.\ \cite{Bersier2002, Delmas2019}). Adapting measures of nestedness or modularity for example to non-sparse networks (as as horizontal communities typically are) would allow us to further characterise how interactions and species are organised. These metrics relate to various aspects of stability and could greatly inform us on how diversity is maintained between species belonging to the same trophic level. Likewise, networks also provide several ways of measuring and describing species roles in their respective communities \parencite{Cirtwill2018a} for example through the use of structural motifs, unique patterns of interacting species which together make up the whole network. Motifs have been found to have important biological meaning in food webs \parencite{Bascompte2005a} but remain to be identified for single-trophic and bipartite networks. 
